29/02/2016:
	- Added support for 1 bit bilevel TIFF


11/02/2016:
	- Added backlog parameter support for command line use through --backlog parameter.
	- Fixed several more Coverity scan warnings.


29/01/2016:
	- Minor update to IIPImage.cc to reduce risk of race condition in stat -> fopen calls


28/01/2016:
	- Added ifdefs to Transform.cc to enforce either ivdep for icc or openmp for gcc


15/01/2016:
	- Fixed a series of minor issues identified by Coverity scan


12/01/2016:
	- Added check to JPEGCompressor to reject images that are not 8 bits per channel
	- Added new floatProcessing() function to View.h to simplify code in JTL and CVT


06/01/2016:
	- Added extra parameter check for incoherent region sizes for IIIF protocol


21/12/2015:
	- Fixed infinite loop in View::calculateResolution if requested size = 0. Set
	  minimum output size to 1px.


07/09/2015:
	- Fixed isfinite autoconf macro in acinclude.m4 to force float type


06/08/2015:
	- Added timestamp check and metadata reload for images that have been modified
	- Added X-Powered-By header as a number of web servers strip out the Server header


03/08/2015:
	- Added palette support for bilevel images to handle cases where LUTs are inverted


27/07/2015:
	- Modified ROT command to accept horizontal flipping through "!" prefix as with IIIF.
	- Cosmetic improvement to FIF logging.
	- Modified TPTImage to disable use of memory mapping when opening images as this seems
	  to be slower when opening very large TIFFs.


24/07/2015:
	- Added timers to all image processing functions in CVT.cc + code cleanup.


21/07/2015:
	- Fixed error in View.cc when setting regions sizes that extend beyond image boundaries:
	  regions now cropped to boundaries.


20/07/2015:
	- More OpenMP parallelization and cleanups to Transform.cc


17/07/2015:
	- Increased buffer memory for JPEG encoding to handle certain images or tiles that
	  encode at Q=100 to sizes significantly larger than the raw data.