@@ -183,6 +183,22 @@ void IIIF::run( Session* session, const string& src ){
 		     << "  \"protocol\" : \"" << IIIF_PROTOCOL << "\"," << endl
 		     << "  \"width\" : " << width << "," << endl
 		     << "  \"height\" : " << height << "," << endl
+		     << "  \"sizes\" : [" << endl
+		     << "     { \"width\" : " << (*session->image)->image_widths[numResolutions-1]
+		     << ", \"height\" : " << (*session->image)->image_heights[numResolutions-1] << " }";
+
+    for( unsigned int i=numResolutions-2; i > 0; i-- ){
+      unsigned int w = (*session->image)->image_widths[i];
+      unsigned int h = (*session->image)->image_heights[i];
+      unsigned int max = session->view->getMaxSize();
+      // Only advertise images below our max size value
+      if( (max==0) || (w < max && h < max) ){
+	infoStringStream << "," << endl
+			 << "     { \"width\" : " << w << ", \"height\" : " << h << " }";
+      }
+    }
+
+    infoStringStream << endl << "  ]," << endl
 		     << "  \"tiles\" : [" << endl
 		     << "     { \"width\" : " << tw << ", \"height\" : " << th
 		     << ", \"scaleFactors\" : [ 1"; // Scale 1 is original image
